# dorsz

./: .env.example  .gitignore  .mcp.json  AGENTS.md  README.md  agents_temperature_check.py  agents_why5_ishikawa.py  main.py  pyproject.toml
.claude/: settings.json
src/: main.py
src/agents/: __init__.py  agents_temperature_check.py  agents_why5.py
src/local_agents/: __init__.py  agents_ishikawa.py  agents_why5.py  in_memory_session.py
src/tools/: __init__.py  ask_human.py  topics_registry.py
tests/: conftest.py  test_agent_runner.py  test_in_memory_session.py  test_problems_registry.py
tools/: __init__.py
